# latest-version

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
latest_version/: __init__.py  __main__.py
src/: lib.rs  main.rs  main.rs.tmp  python_bindings.rs  tests.rs
tests/: test_python.py
